# local-agent-harness

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  GROUNDING.md  README.md  pyproject.toml
.agent/eval/: readiness.md  readiness.md.tmpl
.devcontainer/: devcontainer.json
.github/: copilot-cli.md  copilot-instructions.md
.github/workflows/: governance.yml  publish.yml  verify.yml
docs/: adr-001-agent-instruction-file-discovery.md  adr-002-dry-overlay-deduplication.md  adr-003-dry-shared-conventions-pr-checklist.md
src/local_agent_harness/: __init__.py  __main__.py
src/local_agent_harness/cli/: app.py  cmd_assess.py  cmd_check.py  cmd_init.py  cmd_refresh.py  cmd_report.py  cmd_setup.py  cmd_validate.py  cmd_version.py
src/local_agent_harness/core/: __init__.py  _paths.py  agents_builder.py  assess_repo.py  diff_manifests.py  gitignore.py  manifest_regression.py  precommit.py  readiness_report.py  redaction_smoke.py  runtime_overlay.py  scaffold_manifests.py
src/local_agent_harness/skill_data/local-agent-harness/: SKILL.md
src/local_agent_harness/skill_data/local-agent-harness/assets/: AGENTS.md.tmpl  plan.md.tmpl  repo-skill.SKILL.md.tmpl
src/local_agent_harness/skill_data/local-agent-harness/assets/ci/: governance.yml.tmpl
src/local_agent_harness/skill_data/local-agent-harness/assets/runtime-overlays/: CLAUDE.md.tmpl  codex.config.tmpl  copilot-cli.tmpl  cursor-rules.tmpl
src/local_agent_harness/skill_data/local-agent-harness/references/: agents-md-standard.md  ai-readiness-rubric.md  copilot-instructions-standard.md  manifest-anti-patterns.md  memory-governance.md  runtime-overlays.md  source-mapping.md  stages.md  tool-dag-patterns.md  verify-gate-catalog.md
tests/: conftest.py
tests/integration/: test_cli.py  test_cli_full.py
tests/unit/: test_agents_builder.py  test_assess.py  test_assess_more.py  test_cmd_init.py  test_diff.py  test_gitignore.py  test_lifecycle.py  test_manifest_regression.py  test_paths.py  test_precommit.py  test_readiness.py  test_redaction.py  test_runtime_overlay.py  test_scaffold.py
