[build-system]
requires = ["uv_build>=0.10.12,<0.12.0"]
build-backend = "uv_build"

[project]
name = "local-agent-harness"
version = "0.3.6"
description = "Maturity-aware harness manager for local AI coding agents (Claude Code, Codex CLI, Copilot CLI). Audit, init, and refresh AGENTS.md / GROUNDING.md / CI on GitHub Actions / sandbox at the right S0–S3 stage; ships an installable skill."
readme = "README.md"
license = "MIT"
authors = [
  {name = "Grammy Jiang", email = "grammy.jiang@gmail.com"}
]
requires-python = ">=3.11"
keywords = [
  "ai-agents",
  "claude-code",
  "codex-cli",
  "copilot-cli",
  "github-actions",
  "agents-md",
  "harness",
  "skill",
  "ai-readiness"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed"
]
dependencies = [
  "typer>=0.12,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10"
]

[project.scripts]
local-agent-harness = "local_agent_harness.cli.app:app"

[project.urls]
Homepage = "https://github.com/grammy-jiang/local-agent-harness"
Repository = "https://github.com/grammy-jiang/local-agent-harness"
Issues = "https://github.com/grammy-jiang/local-agent-harness/issues"

[tool.uv.build-backend]
module-name = "local_agent_harness"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["E701", "E731"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
"src/local_agent_harness/core/_paths.py" = ["E402"]
"src/local_agent_harness/core/manifest_regression.py" = ["E402"]
"src/local_agent_harness/core/diff_manifests.py" = ["E402"]
"src/local_agent_harness/core/scaffold_manifests.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/local_agent_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
